--- a/src/main/resources/templates/admin/servico/form.html
+++ b/src/main/resources/templates/admin/servico/form.html
@@ -19,6 +19,11 @@
                                         <div class="form-group">
                                             <label for="nome">Nome</label>
                                             <input type="text" class="form-control" th:field="*{nome}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('nome')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
 
@@ -26,6 +31,11 @@
                                         <div class="form-group">
                                             <label for="valorMinimo">Valor Mínimo</label>
                                             <input type="number" class="form-control" th:field="*{valorMinimo}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('valorMinimo')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -35,6 +45,11 @@
                                         <div class="form-group">
                                             <label for="qtdHoras">Quantidade Horas</label>
                                             <input type="number" class="form-control" th:field="*{qtdHoras}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('qtdHoras')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
 
@@ -42,6 +57,11 @@
                                         <div class="form-group">
                                             <label for="porcentagemComissao">Porcentagem Comissão</label>
                                             <input type="number" class="form-control" th:field="*{porcentagemComissao}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('porcentagemComissao')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -51,6 +71,11 @@
                                         <div class="form-group">
                                             <label for="horasQuarto">Horas Quarto</label>
                                             <input type="number" class="form-control" th:field="*{horasQuarto}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('horasQuarto')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
 
@@ -58,6 +83,11 @@
                                         <div class="form-group">
                                             <label for="valorQuarto">Valor Quarto</label>
                                             <input type="number" class="form-control" th:field="*{valorQuarto}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('valorQuarto')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -67,6 +97,11 @@
                                         <div class="form-group">
                                             <label for="horasSala">Horas Sala</label>
                                             <input type="number" class="form-control" th:field="*{horasSala}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('horasSala')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
 
@@ -74,6 +109,11 @@
                                         <div class="form-group">
                                             <label for="valorSala">Valor Sala</label>
                                             <input type="number" class="form-control" th:field="*{valorSala}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('valorSala')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -83,6 +123,11 @@
                                         <div class="form-group">
                                             <label for="horasBanheiro">Horas Banheiro</label>
                                             <input type="number" class="form-control" th:field="*{horasBanheiro}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('horasBanheiro')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
 
@@ -90,6 +135,11 @@
                                         <div class="form-group">
                                             <label for="valorBanheiro">Valor Banheiro</label>
                                             <input type="number" class="form-control" th:field="*{valorBanheiro}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('valorBanheiro')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -99,6 +149,11 @@
                                         <div class="form-group">
                                             <label for="horasCozinha">Horas Cozinha</label>
                                             <input type="number" class="form-control" th:field="*{horasCozinha}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('horasCozinha')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
 
@@ -106,6 +161,11 @@
                                         <div class="form-group">
                                             <label for="valorCozinha">Valor Cozinha</label>
                                             <input type="number" class="form-control" th:field="*{valorCozinha}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('valorCozinha')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -115,6 +175,11 @@
                                         <div class="form-group">
                                             <label for="horasQuintal">Horas Quintal</label>
                                             <input type="number" class="form-control" th:field="*{horasQuintal}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('horasQuintal')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
 
@@ -122,6 +187,11 @@
                                         <div class="form-group">
                                             <label for="valorQuintal">Valor Quintal</label>
                                             <input type="number" class="form-control" th:field="*{valorQuintal}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('valorQuintal')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -131,6 +201,11 @@
                                         <div class="form-group">
                                             <label for="horasOutros">Horas Outros</label>
                                             <input type="number" class="form-control" th:field="*{horasOutros}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('horasOutros')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
 
@@ -138,6 +213,11 @@
                                         <div class="form-group">
                                             <label for="valorOutros">Valor Outros</label>
                                             <input type="number" class="form-control" th:field="*{valorOutros}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('valorOutros')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -149,6 +229,11 @@
                                             <select class="form-control" th:field="*{icone}">
                                                 <option th:each="icone : ${icones}" th:text="${icone.nome}" th:value="${icone}"></option>
                                             </select>
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('icone')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
 
@@ -156,6 +241,11 @@
                                         <div class="form-group">
                                             <label for="posicao">Posição</label>
                                             <input type="number" class="form-control" th:field="*{posicao}">
+                                            <ul>
+                                                <li class="text-danger"
+                                                    th:each="erro : ${#fields.errors('posicao')}"
+                                                    th:text="${erro}"></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
