--- a/src/main/resources/templates/fragments/_navbar.html
+++ b/src/main/resources/templates/fragments/_navbar.html
@@ -1,5 +1,6 @@
 <!-- Navbar -->
-<nav th:fragment="nav" class="main-header navbar navbar-expand navbar-white navbar-light">
+<nav th:fragment="nav" class="main-header navbar navbar-expand navbar-white navbar-light"
+     xmlns:sec="http://www.w3.org/1999/xhtml">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -20,7 +21,7 @@
                         <img src="https://placekitten.com/200/200" alt="User Avatar" class="img-size-50 mr-3 img-circle">
                         <div class="media-body">
                             <h3 class="dropdown-item-title">
-                                <span>user@mail.com</span>
+                                <span sec:authentication="name">user@mail.com</span>
                                 <span class="float-right text-sm text-danger"><i class="fas fa-online"></i></span>
                             </h3>
                             <p class="text-sm"><small>Membro desde</small></p>
